Record verified Linux DTLS 1.3 PSK proof